<resources>
    <string name="app_name">Roommater</string>
    <string name="textview_second">Falcon, Diego 4/19/2022</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="submit">Submit</string>
    <string name="select_your_birthdate">Select your Birthdate</string>
    <string name="ageError">User needs to be at least 18 years old</string>
    <string name="inputError">Please fill all the fields</string>
    <string name="validEmail">Please add a valid email</string>
    <string name="noBirthdate">Please select your birthdate</string>
    <string name="Back">Back</string>
    <string name="Description">Description</string>
    <string name="Occupation">Occupation</string>
    <string name="Profile">Profile</string>
    <string name="Matches">Matches</string>
    <string name="Settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="matches_description">This is where matches will go</string>
    <string name="settings_description">This is where settings will go</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="title">Title</string>
    <string name="matchedImage">This is the matched image</string>
    <string name="random_person">random person</string>
    <string name="random_person_2">random person 2</string>
    <string name="liked_message">You liked: %s</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="hello">Hello and Welcome</string>
    <string name="Role">Role</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Logout">Logout</string>
    <string name="age">Age</string>
    <string name="zip">Zip code</string>
    <string name="password">Password</string>
    <string name="please_enter_a_valid_content">Please fill out  required fields</string>
    <string name="please_enter_a_valid_email">Please enter a valid school email</string>
    <string name="eighteen_error">You must be at least 18 years old to sign up!</string>
    <string name="text_slash_symbol">/</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="matches_image">matches_image</string>
    <string name="picture_of_the_user">Picture of the user</string>
    <string name="mark_t">Mark T</string>
    <string name="really_cool_dude">Really cool dude</string>
    <string name="image_of_the_match">Image of the match</string>
    <string name="like">Like</string>
    <string name="backgroundpicture">BackgroundPicture</string>
</resources>